--- a/resources/style.css
+++ b/resources/style.css
@@ -79,10 +79,14 @@ main div {
 
 @media only screen and (max-width: 490px) {
     main {
+        display: flex;
+        align-items: center;
         height: 300px;
     }
     
     main div {
+        display: flex;
+        align-items: center;
         height: 80px;
     }
 
@@ -96,11 +100,6 @@ main div {
     }
 }
 
-@media only screen and (max-width: 320px){
-    main div {
-        height: 80px;
-    }
-}
 
 /* Sections */
 
