--- a/resources/style.css
+++ b/resources/style.css
@@ -87,7 +87,9 @@ main div {
     main div {
         display: flex;
         align-items: center;
+        justify-content: center;
         height: 80px;
+        width: 100%;
     }
 
     main div h2 {
@@ -97,6 +99,7 @@ main div {
     main div h1{
         vertical-align: center;
         margin: 0;
+        font-size: 1.5rem;
     }
 }
 
